--- a/frontend/src/app/modules/features/scripts/components/script-overview/script-overview.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-overview/script-overview.component.html
@@ -31,8 +31,9 @@
                 >{{ this.deleteError }}</app-alert
               >
               Sicher, dass du
-              <strong class="text-primary">{{ script?.name }}</strong>
-              unwiderruflich löschen möchtest möchtest?
+              <i>{{ script?.name }} </i>
+              <strong class="text-primary">unwiderruflich löschen</strong>
+              möchtest möchtest?
             </app-modal>
           </ng-template>
         </div>
