--- a/frontend/src/app/modules/features/profile/components/profile-change/profile-change.component.html
+++ b/frontend/src/app/modules/features/profile/components/profile-change/profile-change.component.html
@@ -1,6 +1,6 @@
-<app-page-layout>
+<app-page-layout [loading]="!user">
   <app-card title="Profildaten ändern">
-    <span class="anchor" id="formLogin"></span>
+    <span class="anchor" id="formChangeProfile"></span>
     <form (ngSubmit)="submit()" [formGroup]="form" class="form">
       <div class="form-group mb-3">
         <label for="input-firstname">Vorname</label>
@@ -13,9 +13,6 @@
           type="text"
         />
         <app-form-errors>
-          <app-form-error *ngIf="fieldHasErrors('firstName', 'required')"
-            >Bitte gib deinen Vornamen an.
-          </app-form-error>
           <app-form-error *ngIf="fieldHasErrors('firstName', 'maxlength')"
             >Vorname zu lange.
           </app-form-error>
@@ -32,9 +29,6 @@
           type="text"
         />
         <app-form-errors>
-          <app-form-error *ngIf="fieldHasErrors('lastName', 'required')"
-            >Bitte gib deinen Nachnamen an.
-          </app-form-error>
           <app-form-error *ngIf="fieldHasErrors('lastName', 'maxlength')"
             >Nachname zu lange.
           </app-form-error>
@@ -50,9 +44,6 @@
           type="text"
         />
         <app-form-errors>
-          <app-form-error *ngIf="fieldHasErrors('email', 'required')"
-            >Bitte gib deine Email Adresse ein.
-          </app-form-error>
           <app-form-error *ngIf="fieldHasErrors('email', 'email')"
             >Bitte gib eine gültige Email Adresse ein.
           </app-form-error>
@@ -61,59 +52,76 @@
           </app-form-error>
         </app-form-errors>
       </div>
-      <div class="form-group mb-3">
-        <label for="input-password-old">Altes Passwort</label>
-        <input
-          class="form-control"
-          formControlName="oldPassword"
-          id="input-password-old"
-          placeholder="Dein altes Passwort"
-          type="password"
-        />
-        <app-form-errors>
-          <app-form-error *ngIf="fieldHasErrors('oldPassword', 'required')"
-            >Bitte gib dein Passwort ein.
-          </app-form-error>
-          <app-form-error *ngIf="fieldHasErrors('oldPassword', 'minlength')"
-            >Dein Passwort muss mindestens 8 Zeichen lang sein.
-          </app-form-error>
-        </app-form-errors>
-      </div>
-      <div class="form-group mb-3">
-        <label for="input-password">Neues Passwort</label>
-        <input
-          class="form-control"
-          formControlName="password"
-          id="input-password"
-          placeholder="Dein neues Passwort"
-          type="password"
-        />
-        <app-form-errors>
-          <app-form-error *ngIf="fieldHasErrors('password', 'required')"
-            >Bitte gib dein Passwort ein.
-          </app-form-error>
-          <app-form-error *ngIf="fieldHasErrors('password', 'minlength')"
-            >Dein Passwort muss mindestens 8 Zeichen lang sein.
-          </app-form-error>
-        </app-form-errors>
-      </div>
-      <div class="form-group mb-3">
-        <label for="input-password-confirm">Neues Passwort wiederholen</label>
-        <input
-          class="form-control"
-          formControlName="passwordConfirm"
-          id="input-password-confirm"
-          placeholder="Dein neues Passwort"
-          type="password"
-        />
-        <app-form-errors>
-          <app-form-error *ngIf="fieldHasErrors('passwordConfirm', 'required')"
-            >Bitte wiederhole dein Passwort.
-          </app-form-error>
-          <app-form-error *ngIf="hasError('passwordsNotMatching')"
-            >Deine Passwörter stimmen nicht überein.
-          </app-form-error>
-        </app-form-errors>
+      <div class="d-flex flex-column align-items-center mb-3">
+        <button
+          (click)="toggleShowPasswordChange()"
+          [attr.aria-expanded]="showPasswordChange"
+          aria-controls="collapseExample"
+          class="btn btn-sm btn-outline-primary"
+          type="button"
+        >
+          Passwort
+          <span *ngIf="showPasswordChange">doch nicht</span>
+          ändern
+        </button>
+        <div [(ngbCollapse)]="!showPasswordChange" class="w-100">
+          <div class="form-group mb-3">
+            <label for="input-password-old">Altes Passwort</label>
+            <input
+              class="form-control"
+              formControlName="oldPassword"
+              id="input-password-old"
+              placeholder="Dein altes Passwort"
+              type="password"
+            />
+            <app-form-errors>
+              <app-form-error *ngIf="fieldHasErrors('oldPassword', 'minlength')"
+                >Dein Passwort muss mindestens 8 Zeichen lang sein.
+              </app-form-error>
+              <app-form-error *ngIf="hasError('requiredOldPassword')"
+                >Bitte gib dein altes Passwort an.
+              </app-form-error>
+            </app-form-errors>
+          </div>
+          <div class="form-group mb-3">
+            <label for="input-password">Neues Passwort</label>
+            <input
+              class="form-control"
+              formControlName="password"
+              id="input-password"
+              placeholder="Dein neues Passwort"
+              type="password"
+            />
+            <app-form-errors>
+              <app-form-error *ngIf="fieldHasErrors('password', 'minlength')"
+                >Dein Passwort muss mindestens 8 Zeichen lang sein.
+              </app-form-error>
+              <app-form-error *ngIf="hasError('requiredNewPassword')"
+                >Bitte gib ein neues Passwort an.
+              </app-form-error>
+              <app-form-error *ngIf="hasError('oldAndNewPasswordsEqual')"
+                >Dein neues Passwort darf nicht deinem alten entsprechen.
+              </app-form-error>
+            </app-form-errors>
+          </div>
+          <div class="form-group mb-3">
+            <label for="input-password-confirm"
+              >Neues Passwort wiederholen</label
+            >
+            <input
+              class="form-control"
+              formControlName="passwordConfirm"
+              id="input-password-confirm"
+              placeholder="Dein neues Passwort"
+              type="password"
+            />
+            <app-form-errors>
+              <app-form-error *ngIf="hasError('passwordsNotMatching')"
+                >Deine Passwörter stimmen nicht überein.
+              </app-form-error>
+            </app-form-errors>
+          </div>
+        </div>
       </div>
       <button class="btn btn-secondary" routerLink="/profile" type="button">
         Abbrechen
