#61: fix session after user verification

--- a/frontend/src/app/modules/features/password/reset-password/reset-password.component.html
+++ b/frontend/src/app/modules/features/password/reset-password/reset-password.component.html
@@ -1,8 +1,8 @@
 <app-page-layout>
   <app-card title="Passwort zurücksetzten">
     <form (ngSubmit)="submit()" [formGroup]="form" class="form">
-      Hier kannst du das zurücksetzten deines Passwortes beantragen.
-      <br><br>
+      Hier kannst du das Zurücksetzten deines Passwortes beantragen.
+      <br /><br />
       <div class="form-group mb-3">
         <label for="input-email">Email</label>
         <input
@@ -15,10 +15,10 @@
         />
         <app-form-errors>
           <app-form-error *ngIf="fieldHasErrors('email', 'required')"
-          >Bitte gib deine Email Adresse ein.
+            >Bitte gib deine Email Adresse ein.
           </app-form-error>
           <app-form-error *ngIf="fieldHasErrors('email', 'email')"
-          >Bitte gib eine gültige Email Adresse ein.
+            >Bitte gib eine gültige Email Adresse ein.
           </app-form-error>
         </app-form-errors>
       </div>
