#61: add missing frontend docs

--- a/frontend/src/app/modules/features/profile/profile.component.html
+++ b/frontend/src/app/modules/features/profile/profile.component.html
@@ -3,7 +3,7 @@
     <div class="d-flex justify-content-between align-items-center">
       <h1 class="display-1">Profil</h1>
       <div>
-        <button (click)="openModal(deleteModal)" class="btn btn-danger">
+        <button (click)="openDeleteModal(deleteModal)" class="btn btn-danger">
           Konto Löschen
         </button>
         <ng-template #deleteModal let-modal>
