#8: add basic role reassignments (ui)

--- a/frontend/src/app/modules/features/profile/profile.component.html
+++ b/frontend/src/app/modules/features/profile/profile.component.html
@@ -11,6 +11,7 @@
             (confirm)="deleteUser(modal)"
             (decline)="modal.dismiss()"
             [loading]="deleteLoading"
+            [theme]="theme.danger"
             confirmBtnLabel="Löschen"
             title="Nutzer löschen"
           >
