--- a/frontend/src/app/modules/features/scripts/components/script-overview/script-overview.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-overview/script-overview.component.html
@@ -9,7 +9,7 @@
         <div>
           <button
             class="btn btn-primary me-3"
-            routerLink="/scripts/{{ script?.id }}/read"
+            routerLink="/scripts/{{ script?.id }}/view"
           >
             Skript ansehen
           </button>
@@ -21,6 +21,7 @@
               (confirm)="deleteScript(modal)"
               (decline)="modal.dismiss()"
               [loading]="deleteLoading"
+              [theme]="theme.danger"
               confirmBtnLabel="Löschen"
               title="Skript löschen"
             >
