--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -14,3 +14,12 @@ form .form-control {
 .dropdown-toggle::after {
   display: none !important;
 }
+
+.bg-lighter-dark {
+  background-color: hsl(210deg 11% 21%) !important;
+}
+
+.badge.badge-lg {
+  font-size: 1em;
+  font-weight: 500;
+}
