--- a/frontend/src/app/modules/shared/components/page-layout/page-layout.component.scss
+++ b/frontend/src/app/modules/shared/components/page-layout/page-layout.component.scss
@@ -19,7 +19,7 @@ footer {
 
 header,
 footer {
-  z-index: 10000; // bigger than bootstrap dropdowns
+  z-index: 10000; // greater than bootstrap dropdowns
 }
 
 header nav,
