#34: collapse adjacent lines with same roles

--- a/frontend/src/app/modules/features/scripts/components/script-viewer/script-line/script-line.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-viewer/script-line/script-line.component.html
@@ -6,11 +6,13 @@
     placement="bottom-end top-end bottom-start top-start"
   >
     <div *ngIf="!isInstruction" class="roles px-1">
-      <span
-        *ngFor="let role of line?.roles; let i = index"
-        class="d-inline-block"
-        >{{ role.name }}{{ i < line?.roles.length - 1 ? ', ' : '' }}</span
-      >
+      <ng-container *ngIf="!sameRolesAsPrevLine">
+        <span
+          *ngFor="let role of line?.roles; let i = index"
+          class="d-inline-block"
+          >{{ role.name }}{{ i < line?.roles.length - 1 ? ', ' : '' }}</span
+        >
+      </ng-container>
     </div>
     <p
       [class.fst-italic]="isInstruction"
@@ -18,6 +20,7 @@
         isHighlighted(scriptViewerService.$selectedRole | async)
       "
       [class.text-secondary]="isInstruction"
+      class="w-100"
       ngbDropdownToggle
     >
       {{ line?.content }}
