--- a/frontend/src/app/modules/features/scripts/components/script-viewer/script-page/script-page.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-viewer/script-page/script-page.component.html
@@ -2,8 +2,9 @@
   <div class="d-flex flex-column flex-grow-1 justify-content-between">
     <div class="wrapper">
       <app-script-line
-        *ngFor="let line of page?.lines"
+        *ngFor="let line of page?.lines; let i = index"
         [line]="line"
+        [prevLine]="page?.lines[i - 1]"
       ></app-script-line>
     </div>
     <div class="d-flex justify-content-center mt-3">{{ page?.index }}</div>
