--- a/frontend/src/app/modules/features/scripts/components/script-upload/script-upload-review/script-upload-review.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-upload/script-upload-review/script-upload-review.component.html
@@ -1,5 +1,26 @@
 <app-page-layout [loading]="getLoading" [showSidebar]="true" theme="dark">
   <app-script-viewer></app-script-viewer>
+  <ng-template #tutorialModal let-modal>
+    <app-modal
+      (confirm)="modal.dismiss()"
+      (decline)="modal.dismiss()"
+      [showDecline]="false"
+      confirmBtnLabel="Weiter"
+      title="Skript überprüfen"
+    >
+      <p>Bitte überprüfe, ob dein Skript richtig verarbeitet wurde.<br /></p>
+      <p>
+        Sollten Rollen den falschen Texten zugewiesen sein, kannst du auf den
+        Text klicken und die
+        <strong class="text-primary">Rollen ändern</strong>.
+      </p>
+      <p>
+        Wurden Rollen mehrfach erkannt, so kannst du auf der rechten
+        Seitenleiste
+        <strong class="text-primary">Rollen vereinigen</strong>.
+      </p>
+    </app-modal>
+  </ng-template>
   <form
     (ngSubmit)="submit()"
     [formGroup]="form"
