--- a/frontend/src/app/modules/shared/components/page-layout/page-layout.component.html
+++ b/frontend/src/app/modules/shared/components/page-layout/page-layout.component.html
@@ -1,8 +1,6 @@
 <div
   [class.sidebar-gap]="showSidebar"
-  class="wrapper d-flex flex-column min-vh-100 bg-{{
-    theme === 'light' ? 'light' : 'lighter-dark'
-  }}
+  class="wrapper bg-{{ theme === 'light' ? 'light' : 'lighter-dark' }}
   "
 >
   <header *ngIf="showHeader" class="fixed-top">
@@ -77,18 +75,32 @@
       </div>
     </nav>
   </header>
-  <main class="w-100 p-5 flex-grow-1 d-flex flex-column">
-    <div
-      *ngIf="loading"
-      @fixedAppear
-      class="fixed-top vh-100 vw-100 flex-grow-1 d-flex justify-content-center align-items-center"
-    >
-      <div class="spinner-border text-secondary" role="status">
-        <span class="sr-only"></span>
+  <!--
+    Main has 'overflow: scroll', so that opening modal don't always collapse the ui (since they apply
+    'overflow: hidden' on the root element).
+  -->
+  <main
+    [class.is-dark-theme]="theme === 'dark'"
+    class="w-100 p-5 d-flex flex-column"
+  >
+    <!--
+      Additonal wrapper, as 'max-width' cannot be applied on 'main'.
+      This is because '.main' has a scrollbar, and if it also has a 'max-width', the scroll-bar wouldn't stick
+      on the outern edge.
+    -->
+    <div class="wrapper w-100 d-flex flex-column flex-grow-1">
+      <div
+        *ngIf="loading"
+        @fixedAppear
+        class="fixed-top vh-100 vw-100 flex-grow-1 d-flex justify-content-center align-items-center"
+      >
+        <div class="spinner-border text-secondary" role="status">
+          <span class="sr-only"></span>
+        </div>
       </div>
-    </div>
-    <div *ngIf="!loading" @fixedAppear class="flex-grow-1 d-flex flex-column">
-      <ng-content></ng-content>
+      <div *ngIf="!loading" @fixedAppear class="flex-grow-1 d-flex flex-column">
+        <ng-content></ng-content>
+      </div>
     </div>
   </main>
   <aside
