--- a/frontend/src/app/modules/features/scripts/components/script-upload/script-upload-review/script-upload-review.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-upload/script-upload-review/script-upload-review.component.html
@@ -55,7 +55,29 @@
       ></app-script-roles-list>
     </div>
     <div class="flex-grow-1"></div>
-    <div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-between">
+      <button
+        (click)="openCancelUploadModal(cancelUploadModal)"
+        class="btn btn-outline-secondary"
+        type="button"
+      >
+        Abbrechen
+      </button>
+      <ng-template #cancelUploadModal let-modal>
+        <app-modal
+          (confirm)="cancelUpload(modal)"
+          (decline)="modal.dismiss()"
+          confirmBtnLabel="Verwerfen"
+          title="Skript verwerfen"
+        >
+          <p>
+            Sicher, dass du
+            <i>{{ form.value.scriptName }} </i>
+            <strong class="text-primary">verwerfen</strong>
+            möchtest?
+          </p>
+        </app-modal>
+      </ng-template>
       <app-button
         [disabled]="hasError()"
         [loading]="loading"
