--- a/frontend/src/app/modules/features/scripts/components/script-viewer/script-line/script-line.component.scss
+++ b/frontend/src/app/modules/features/scripts/components/script-viewer/script-line/script-line.component.scss
@@ -4,7 +4,7 @@
 
   &.is-editing {
     p:hover,
-    &.is-active p {
+    &.is-interacting p {
       background-color: rgb(0 0 0 / 5%);
 
       &.highlighted {
@@ -14,6 +14,13 @@
 
     p {
       cursor: pointer;
+    }
+  }
+
+  &.is-hidden {
+    .roles span,
+    p {
+      text-decoration: line-through;
     }
   }
 }
