#27: sending and accepting invite/ displaying preview joined scripts

--- a/frontend/src/app/modules/features/scripts/components/script-list/script-list.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-list/script-list.component.html
@@ -6,7 +6,7 @@
   ></app-script-list-item>
   <ng-content></ng-content>
   <app-script-list-item
-    *ngFor="let script of scriptService?.$scripts | async"
+    *ngFor="let script of scriptPreviews"
     [script]="script"
   ></app-script-list-item>
 </div>
