--- a/frontend/src/app/modules/features/scripts/scripts.component.html
+++ b/frontend/src/app/modules/features/scripts/scripts.component.html
@@ -2,5 +2,10 @@
   <app-script-list
     hasUploadButton="true"
     title="Deine Skripte"
+    permission="owner"
+  ></app-script-list>
+  <app-script-list
+    title="Beigetretene Skripte"
+    permission="participant"
   ></app-script-list>
 </app-page-layout>
