--- a/frontend/src/app/modules/features/scripts/scripts.component.html
+++ b/frontend/src/app/modules/features/scripts/scripts.component.html
@@ -5,7 +5,7 @@
     permission="owner"
   ></app-script-list>
   <app-script-list
-    title="Beigetretene Skripte"
+    title="Verknüpfte Skripte"
     permission="participant"
   ></app-script-list>
 </app-page-layout>
