--- a/frontend/src/app/modules/features/scripts/components/script-overview/script-overview.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-overview/script-overview.component.html
@@ -45,6 +45,9 @@
           </ng-template>
         </div>
       </div>
+      <app-script-members
+        [members]="members"
+      ></app-script-members>
     </div>
   </ng-template>
 </app-page-layout>
