--- a/frontend/src/app/modules/features/scripts/components/script-edit/script-edit.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-edit/script-edit.component.html
@@ -53,11 +53,29 @@
         [roles]="script.roles"
         [selectedRole]="scriptViewerService.$selectedRole | async"
       ></app-script-roles-list>
+      <button
+        (click)="openModal(mergeRolesModal)"
+        class="btn btn-secondary mt-2"
+        type="button"
+      >
+        Rollen vereinigen
+      </button>
+      <ng-template #mergeRolesModal let-modal>
+        <app-merge-roles-modal [modal]="modal"></app-merge-roles-modal>
+      </ng-template>
     </div>
     <div class="flex-grow-1"></div>
-    <div class="d-flex justify-content-between">
+    <div class="d-flex flex-column align-items-stretch">
+      <app-button
+        [disabled]="hasError()"
+        [fullWidth]="true"
+        [loading]="loading"
+        class="mb-2"
+        label="Skript abpeichern"
+        type="submit"
+      ></app-button>
       <button
-        (click)="openCancelUploadModal(cancelUploadModal)"
+        (click)="openModal(cancelUploadModal)"
         class="btn btn-outline-secondary"
         type="button"
       >
@@ -78,12 +96,6 @@
           </p>
         </app-modal>
       </ng-template>
-      <app-button
-        [disabled]="hasError()"
-        [loading]="loading"
-        label="Skript abpeichern"
-        type="submit"
-      ></app-button>
     </div>
   </form>
 </app-page-layout>
