--- a/frontend/src/app/modules/features/scripts/components/script-viewer/script-line/script-line.component.scss
+++ b/frontend/src/app/modules/features/scripts/components/script-viewer/script-line/script-line.component.scss
@@ -8,7 +8,7 @@
       background-color: rgb(0 0 0 / 5%);
 
       &.highlighted {
-        background-color: rgb(255 255 0 / 50%);
+        background-color: rgba(228 206 7 / 30%);
       }
     }
 
@@ -52,6 +52,6 @@ p {
   }
 
   &.highlighted {
-    background-color: rgb(255 255 0 / 30%);
+    background-color: rgba(228 206 7 / 20%);
   }
 }
