--- a/frontend/src/app/modules/shared/components/modal/modal.component.html
+++ b/frontend/src/app/modules/shared/components/modal/modal.component.html
@@ -17,6 +17,7 @@
   </button>
   <app-button
     (click)="onConfirm()"
+    [disabled]="disabled"
     [label]="confirmBtnLabel || 'Ok'"
     [loading]="loading"
     [theme]="theme"
