--- a/frontend/src/app/modules/features/scripts/components/script-edit/merge-roles-modal/merge-roles-modal.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-edit/merge-roles-modal/merge-roles-modal.component.html
@@ -3,8 +3,8 @@
   (decline)="modal.dismiss()"
   [disabled]="hasError()"
   [loading]="loading"
-  confirmBtnLabel="Vereinigen"
-  title="Rollen vereinigen"
+  confirmBtnLabel="Zusammenlegen"
+  title="Rollen zusammenlegen"
 >
   <form (ngSubmit)="submit()" [formGroup]="form" class="form">
     <p>
@@ -25,7 +25,7 @@
       </app-form-errors>
     </div>
     <div class="form-group mt-3">
-      <label for="input-role-name">Neue Bezeichnung</label>
+      <label for="input-role-name">Bezeichnung</label>
       <input
         class="form-control roles-input"
         formControlName="roleName"
