--- a/frontend/src/app/modules/features/scripts/components/script-viewer/script-line/script-line.component.scss
+++ b/frontend/src/app/modules/features/scripts/components/script-viewer/script-line/script-line.component.scss
@@ -2,13 +2,15 @@
   display: block;
   --text-padding: 0.5em;
 
-  &.is-editing {
+  &.is-editing-script {
     p:hover,
     &.is-interacting p {
       background-color: rgb(0 0 0 / 5%);
+      box-shadow: 0 0 7px rgb(0 0 0 / 2%);
 
       &.highlighted {
         background-color: rgba(228 206 7 / 30%);
+        box-shadow: 0 0 7px rgb(0 0 0 / 1%);
       }
     }
 
