--- a/frontend/src/app/modules/shared/components/page-layout/page-layout.component.html
+++ b/frontend/src/app/modules/shared/components/page-layout/page-layout.component.html
@@ -36,7 +36,7 @@
         <ng-template #loggedIn>
           <div class="d-inline-block" display="dynamic" ngbDropdown>
             <button
-              class="btn btn-primary bg-transparent border-0 shadow-none d-inline-flex align-items-center"
+              class="btn btn-primary p-0 bg-transparent border-0 shadow-none d-inline-flex align-items-center"
               id="dropdown"
               ngbDropdownToggle
               type="button"
