--- a/frontend/src/app/modules/features/scripts/components/script-edit/script-edit.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-edit/script-edit.component.html
@@ -59,45 +59,47 @@
       </div>
       <app-script-roles-list
         (roleClicked)="scriptViewerService.setSelectedRole($event)"
-        [roles]="script.roles"
+        [roles]="script?.roles"
         [selectedRole]="scriptViewerService.$selectedRole | async"
       ></app-script-roles-list>
       <ng-template #mergeRolesModal let-modal>
         <app-merge-roles-modal [modal]="modal"></app-merge-roles-modal>
       </ng-template>
     </div>
-    <div class="flex-grow-1"></div>
-    <div class="d-flex flex-column align-items-stretch">
-      <app-button
-        [disabled]="hasError()"
-        [fullWidth]="true"
-        [loading]="loading"
-        class="mb-2"
-        label="Skript abpeichern"
-        type="submit"
-      ></app-button>
-      <button
-        (click)="openModal(cancelUploadModal)"
-        class="btn btn-outline-secondary"
-        type="button"
-      >
-        Abbrechen
-      </button>
-      <ng-template #cancelUploadModal let-modal>
-        <app-modal
-          (confirm)="cancelUpload(modal)"
-          (decline)="modal.dismiss()"
-          confirmBtnLabel="Verwerfen"
-          title="Skript verwerfen"
+    <ng-container *ngIf="isUploading">
+      <div class="flex-grow-1"></div>
+      <div class="d-flex flex-column align-items-stretch">
+        <app-button
+          [disabled]="hasError()"
+          [fullWidth]="true"
+          [loading]="loading"
+          class="mb-2"
+          label="Skript abpeichern"
+          type="submit"
+        ></app-button>
+        <button
+          (click)="openModal(cancelUploadModal)"
+          class="btn btn-outline-secondary"
+          type="button"
         >
-          <p>
-            Sicher, dass du
-            <i>{{ form.value.scriptName }} </i>
-            <strong class="text-primary">verwerfen</strong>
-            möchtest?
-          </p>
-        </app-modal>
-      </ng-template>
-    </div>
+          Abbrechen
+        </button>
+        <ng-template #cancelUploadModal let-modal>
+          <app-modal
+            (confirm)="cancelUpload(modal)"
+            (decline)="modal.dismiss()"
+            confirmBtnLabel="Verwerfen"
+            title="Skript verwerfen"
+          >
+            <p>
+              Sicher, dass du
+              <i>{{ form.value.scriptName }} </i>
+              <strong class="text-primary">verwerfen</strong>
+              möchtest?
+            </p>
+          </app-modal>
+        </ng-template>
+      </div>
+    </ng-container>
   </form>
 </app-page-layout>
