--- a/frontend/src/app/modules/shared/components/page-layout/page-layout.component.html
+++ b/frontend/src/app/modules/shared/components/page-layout/page-layout.component.html
@@ -92,7 +92,7 @@
       <div
         *ngIf="loading"
         @fixedAppear
-        class="fixed-top vh-100 vw-100 flex-grow-1 d-flex justify-content-center align-items-center"
+        class="loading-screen fixed-top vh-100 flex-grow-1 d-flex justify-content-center align-items-center"
       >
         <div class="spinner-border text-secondary" role="status">
           <span class="sr-only"></span>
