--- a/frontend/src/app/modules/shared/components/page-layout/page-layout.component.scss
+++ b/frontend/src/app/modules/shared/components/page-layout/page-layout.component.scss
@@ -6,7 +6,10 @@
     padding-top: var(--nav-height);
 
     &.sidebar-gap {
-      padding-right: var(--sidebar-width);
+      &,
+      .loading-screen {
+        padding-right: var(--sidebar-width);
+      }
     }
   }
 }
