--- a/frontend/src/app/modules/features/scripts/components/script-read/script-read.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-read/script-read.component.html
@@ -1,5 +1,10 @@
 <app-page-layout [loading]="loading" theme="dark">
-  <app-alert *ngIf="error; else noError" [closeable]="false" type="danger">
+  <app-alert
+    *ngIf="error; else noError"
+    [closeable]="false"
+    class="mb-1"
+    type="danger"
+  >
     <strong>Fehler!</strong> Skript wurde nicht gefunden.
   </app-alert>
   <ng-template #noError>
