--- a/frontend/src/app/modules/shared/components/alert/alert.component.html
+++ b/frontend/src/app/modules/shared/components/alert/alert.component.html
@@ -2,7 +2,7 @@
 <div
   class="alert alert-{{
     type
-  }} d-flex justify-content-between align-items-center flex-grow-1"
+  }} mb-0 d-flex justify-content-between align-items-center flex-grow-1"
   role="alert"
 >
   <span><ng-content></ng-content></span>
