--- a/frontend/src/app/modules/core/components/toasts/toasts.component.scss
+++ b/frontend/src/app/modules/core/components/toasts/toasts.component.scss
@@ -2,5 +2,5 @@
   position: fixed;
   right: 0;
   bottom: 0;
-  z-index: 100; // greater than the sidebar
+  z-index: 10000; // greater than the modal and sidebar
 }
