--- a/frontend/src/app/modules/features/scripts/components/script-edit/script-edit.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-edit/script-edit.component.html
@@ -6,8 +6,13 @@
     class="form d-flex flex-column flex-grow-1"
     role="sidebar"
   >
-    <h2 class="mb-4">Skript hochladen</h2>
-    <div class="form-group mb-4">
+    <h2 class="mb-4">
+      <ng-container *ngIf="!isUploading && script">
+        <span class="truncate">{{ script?.name }}</span> bearbeiten
+      </ng-container>
+      <ng-container *ngIf="isUploading"> Skript hochladen</ng-container>
+    </h2>
+    <div *ngIf="isUploading" class="form-group mb-4">
       <label for="input-script-name">Bezeichnung</label>
       <input
         class="form-control"
@@ -46,41 +51,51 @@
         <app-merge-roles-modal [modal]="modal"></app-merge-roles-modal>
       </ng-template>
     </div>
-    <ng-container *ngIf="isUploading">
-      <div class="flex-grow-1"></div>
-      <div class="d-flex flex-column align-items-stretch">
-        <app-button
-          [disabled]="hasError()"
-          [fullWidth]="true"
-          [loading]="loading"
-          class="mb-2"
-          label="Skript abpeichern"
-          type="submit"
-        ></app-button>
-        <button
-          (click)="openModal(cancelUploadModal)"
-          class="btn btn-outline-secondary"
-          type="button"
-        >
-          Abbrechen
-        </button>
-        <ng-template #cancelUploadModal let-modal>
-          <app-modal
-            (confirm)="cancelUpload(modal)"
-            (decline)="modal.dismiss()"
-            confirmBtnLabel="Verwerfen"
-            title="Skript verwerfen"
-          >
-            <p>
-              Sicher, dass du
-              <i>{{ form.value.scriptName }} </i>
-              <strong class="text-primary">verwerfen</strong>
-              möchtest?
-            </p>
-          </app-modal>
-        </ng-template>
+    <div class="flex-grow-1"></div>
+    <app-alert
+      *ngIf="!isUploading && (scriptViewerService.$loading | async)"
+      [closeable]="false"
+      type="primary"
+    >
+      <div class="script-loading">
+        <div class="spinner-border spinner-border-sm me-2">
+          <span class="sr-only"></span>
+        </div>
+        Änderungen speichern..
       </div>
-    </ng-container>
+    </app-alert>
+    <div *ngIf="isUploading" class="d-flex flex-column align-items-stretch">
+      <app-button
+        [disabled]="hasError()"
+        [fullWidth]="true"
+        [loading]="loading"
+        class="mb-2"
+        label="Skript abpeichern"
+        type="submit"
+      ></app-button>
+      <button
+        (click)="openModal(cancelUploadModal)"
+        class="btn btn-outline-secondary"
+        type="button"
+      >
+        Abbrechen
+      </button>
+      <ng-template #cancelUploadModal let-modal>
+        <app-modal
+          (confirm)="cancelUpload(modal)"
+          (decline)="modal.dismiss()"
+          confirmBtnLabel="Verwerfen"
+          title="Skript verwerfen"
+        >
+          <p>
+            Sicher, dass du
+            <i>{{ form.value.scriptName }} </i>
+            <strong class="text-primary">verwerfen</strong>
+            möchtest?
+          </p>
+        </app-modal>
+      </ng-template>
+    </div>
   </form>
 </app-page-layout>
 <ng-template #tutorialModal let-modal>
